tests/invalid/strict_typing/type_mismatch.php
<?php

function takesInt(int $value): void
{
}

takesInt('not-int');

